# qualidade_em_projeto_de_dados

./: README.md  meu_duckdb2.db  mkdocs.yml  pyproject.toml  schema_crm.py
.github/workflows/: ci.yml
app/: etl.py  etl_infer_schema.py  funcao.py  read_duckdb.py  schema.py
docs/: index.md
tests/: test_funcao_etl.py  test_funcao_teste.py
